Fix(tasks/detail): Task detail is now fully responsive.
So turns out the justify-content was causing task cards with less content to be squashed. Now all detail cards use margin 0px auto; to set the borders on the sides which is then filled by the card.

--- a/apps/web/src/app/tasks/components/task-detail/task-detail.component.scss
+++ b/apps/web/src/app/tasks/components/task-detail/task-detail.component.scss
@@ -2,7 +2,6 @@
 
 .container {
     display: grid;
-    justify-content: center;
 }
 
 // Mark as Complete
@@ -40,10 +39,12 @@
 
 task-detail {
     box-sizing: border-box;
+    width: 100%;
+    max-width: 592px;
 
-    width: 592px;
     height: 585px;
     padding: 56px;
+    margin: 0px auto;
 
     background-color: white;
     border: 1px solid #eaedf3;
@@ -52,12 +53,9 @@ task-detail {
 
 @media (max-width: 768px) {
     task-detail {
-        width: 100%;
-        max-width: 592px;
+        min-width: 375px;
         height: 496px;
-
         padding: 24px;
-        margin-bottom: 164px;
     }
 
     .mob-none {
